Mejorando los readme y creando builds